--- a/app/view/customer/upCustomer.html
+++ b/app/view/customer/upCustomer.html
@@ -29,8 +29,12 @@
             <div role="tabpanel" class="tab-pane fade in active pessoal">
 
                 <!--presentation-->
-                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_name"></span></h1>
-                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_name"></span></h2>
+                <div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
+
+                    <h1><span class="text-primary hidden-xs" ng-bind="user.ds_name"></span></h1>
+                    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_name"></span></h2>
+
+                </div>
 
                 <form name="formPessoal" class="form-horizontal">
 
@@ -39,7 +43,7 @@
                         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Nome e sobrenome"
                                    name="name"
                                    type="text"
@@ -94,7 +98,7 @@
 
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe o telefone Ex: 6122233345"
                                    name="phone"
                                    type="text"
@@ -187,7 +191,7 @@
 
                             <div class="input-group">
 
-                                <input class="form-control password"
+                                <input class="form-control input-sm password"
                                        placeholder="Informe a nova senha"
                                        name="password"
                                        type="password"
@@ -198,7 +202,7 @@
                                        required/>
 
                                 <span class="input-group-btn">
-                                    <button class="btn btn-default" ng-click="showhidePass()">
+                                    <button class="btn btn-default btn-sm" ng-click="showhidePass()">
                                         <i id="switchPass" class="glyphicon glyphicon-eye-close"></i>
                                     </button>
                                 </span>
@@ -228,7 +232,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control password"
+                            <input class="form-control input-sm password"
                                    placeholder="Repita a senha"
                                    name="re_password"
                                    type="password"
@@ -286,7 +290,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe o CEP"
                                    name="zip"
                                    type="text"
@@ -319,7 +323,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe a UF"
                                    name="province"
                                    type="text"
@@ -349,7 +353,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe a cidade"
                                    name="city"
                                    type="text"
@@ -379,7 +383,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe o bairro"
                                    name="neighborhood"
                                    type="text"
@@ -409,7 +413,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Informe o endereço"
                                    name="address"
                                    type="address"
@@ -439,7 +443,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control input-sm"
                                    placeholder="Complemento. Ex: Ap 01, casa 01, lote 01."
                                    name="complement"
                                    type="text"
