--- a/app/view/user/upUser.html
+++ b/app/view/user/upUser.html
@@ -25,8 +25,12 @@
             <div role="tabpanel" class="tab-pane fade in active pessoal">
 
                 <!--presentation-->
-                <h1><span class="text-primary hidden-xs" ng-bind="row.ds_name"></span></h1>
-                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_name"></span></h2>
+                <div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
+
+                    <h1><span class="text-primary hidden-xs" ng-bind="row.ds_name"></span></h1>
+                    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_name"></span></h2>
+
+                </div>
 
                 <form name="formPessoal" class="form-horizontal" ng-show="row != null">
 
@@ -39,7 +43,7 @@
                         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="name e sobrename"
                                    name="ds_name"
                                    type="text"
@@ -94,7 +98,7 @@
 
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe o telefone Ex: 6122233345"
                                    name="phone"
                                    type="text"
@@ -120,7 +124,7 @@
                     <!--field phone-->
 
                     <!--field profile-->
-                    <div class="form-group" ng-init="teste = getProfiles()">
+                    <div class="form-group" ng-init="getProfiles()">
 
                         <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label">Perfil<span class="text-danger">*</span></label>
 
@@ -165,7 +169,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe o CEP"
                                    name="zip"
                                    type="text"
@@ -198,7 +202,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe a UF"
                                    name="province"
                                    type="text"
@@ -228,7 +232,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe a cidade"
                                    name="city"
                                    type="text"
@@ -258,7 +262,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe o bairro"
                                    name="neighborhood"
                                    type="text"
@@ -288,7 +292,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Informe o endereço"
                                    name="address"
                                    type="address"
@@ -318,7 +322,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                           <input class="form-control input-sm"
                                    placeholder="Complemento. Ex: Ap 01, casa 01, lote 01."
                                    name="complement"
                                    type="text"
