--- a/app/view/product/addProduct.html
+++ b/app/view/product/addProduct.html
@@ -27,7 +27,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Nome do produto"
                    name="ds_product"
                    type="text"
@@ -84,7 +84,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Valor do produto"
                    name="nu_value"
                    type="text"
@@ -115,7 +115,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Quantidade"
                    name="nu_quantity"
                    type="text"
@@ -146,7 +146,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Tempo de produção"
                    name="nu_production"
                    type="text"
@@ -182,7 +182,7 @@
                 <span class="input-group-btn">
 
                     <span class="btn btn-primary btn-file btn-sm">
-                        Arquivo <input type="file" name="ds_image" ng-model="row_ds_image"/>
+                        Arquivo <input id="file" type="file" name="ds_image" />
 
                         <i class="glyphicon glyphicon-folder-open"></i>
                     </span>
