--- a/app/view/user/addUser.html
+++ b/app/view/user/addUser.html
@@ -1,10 +1,15 @@
 <legend>Cadastro de usuário</legend>
 
 <!--presentation-->
-<div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
+<div class="row">
 
-    <h1><span class="text-primary hidden-xs" ng-bind="row.ds_name"></span></h1>
-    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_name"></span></h2>
+    <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6 well well-sm" ng-show="row.ds_name != null">
+
+        <h1 class="hidden-xs hidden-sm"><span class="text-primary" ng-bind="row.ds_name"></span></h1>
+
+        <h3 class="hidden-md hidden-lg"><span class="text-primary" ng-bind="row.ds_name"></span></h3>
+
+    </div>
 
 </div>
 
@@ -19,7 +24,7 @@
         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Nome e sobrenome"
                    name="ds_name"
                    type="text"
@@ -89,7 +94,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Senha"
                    name="ds_password"
                    type="password"
@@ -120,7 +125,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
-           <input class="form-control input-sm"
+            <input class="form-control input-sm"
                    placeholder="Repita a senha"
                    name="re_password"
                    type="password"
