--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -22,10 +22,10 @@
 </div>
 <!--banner motion-->
 
-<!--linha-->
+<!--row-->
 <div class="row">
 
-    <!--Novidades-->
+    <!--news-->
     <div class=" col-md-6 col-lg-6">
 
         <div class="thumbnail">
@@ -99,35 +99,8 @@
     </div>
 
     <!--thumb-->
-
-
-    <!--    <div class="col-sm-3 col-md-2">
-    
-            <div class="thumbnail">
-    
-                <div class="caption">
-    
-                    <a href="">
-                        <p align="center"><img src="img/carousel_novidade/bolsas.png" height="170" width="170" class="img-responsive" /></p>
-                    </a>
-    
-                    <p>Bolsa Arrendondada</p>
-    
-                    <span class="text-gray"><strong>R$ 100,00</strong></span>
-    
-                    <div class="pull-right">
-                        <i class="glyphicon glyphicon-shopping-cart text-warning"></i>
-                        <i class="glyphicon glyphicon-heart text-danger"></i>
-                    </div>
-    
-                </div>
-    
-            </div>
-    
-        </div>-->
-
     <div ng-controller="productController">
-        <div ng-init="getProducts()">
+        <div ng-init="getProductsByFilter()">
 
             <div ng-repeat="row in rows" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 
@@ -135,8 +108,8 @@
 
                     <div class="caption">
 
-                        <a href="">
-                            <p align="center"><img src="{{row.im_product_image.encoded}}" height="170" width="170" class="img-responsive" /></p>
+                        <a href="#/product/detailProduct/{{row.sq_product}}">
+                            <p align="center"><img src="{{row.im_product_image.encoded}}" class="img-responsive" /></p>
                         </a>
 
                         <p>{{row.ds_product}}</p>
@@ -158,7 +131,7 @@
     </div>
 
 </div>
-<!--linha-->
+<!--row-->
 
 <script src="app/component/motio.min.js"></script>
 <script src="app/component/banner_index.js"></script>
