--- a/app/view/product/upProduct.html
+++ b/app/view/product/upProduct.html
@@ -8,7 +8,7 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6 well well-sm">
 
             <!--presentation-->
-            <h1 class="hidden-xs hidden-sm"><img src={{row.im_product_image.encoded}} /> <span class="text-primary" ng-bind="row.ds_product"></span></h1>
+            <h1 class="hidden-xs hidden-sm"><img class="img-responsive" src={{row.im_product_image.encoded}} /> <span class="text-primary" ng-bind="row.ds_product"></span></h1>
 
             <h3 class="hidden-md hidden-lg"><img src={{row.im_product_image.encoded}} /> <span class="text-primary" ng-bind="row.ds_product"></span></h3>
 
@@ -19,7 +19,7 @@
     <form name="form" class="form-horizontal">
 
         <!--ds_product hidden-->
-        <input name="ds_product" type="hidden" ng-model="row.ds_product" />
+        <input name="sq_product" type="hidden" ng-model="row.sq_product" />
 
         <!--field name-->
         <div class="form-group">
