--- a/app/view/customer/upCustomer.html
+++ b/app/view/customer/upCustomer.html
@@ -31,8 +31,8 @@
                 <!--presentation-->
                 <div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
 
-                    <h1><span class="text-primary hidden-xs" ng-bind="user.ds_name"></span></h1>
-                    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_name"></span></h2>
+                    <h1><span class="text-primary hidden-xs text-capitalize" ng-bind="user.ds_name"></span></h1>
+                    <h2><span class="text-primary hidden-sm hidden-md hidden-lg text-capitalize" ng-bind="user.ds_name"></span></h2>
 
                 </div>
 
