--- a/app/view/product/addProduct.html
+++ b/app/view/product/addProduct.html
@@ -5,9 +5,9 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6 well well-sm" ng-show="row.ds_product != null">
 
         <!--presentation-->
-        <h1 class="hidden-xs hidden-sm"><span class="text-primary" ng-bind="row.ds_product"></span></h1>
+        <h1 class="hidden-xs hidden-sm"><span class="text-primary text-capitalize" ng-bind="row.ds_product"></span></h1>
 
-        <h3 class="hidden-md hidden-lg"><span class="text-primary" ng-bind="row.ds_product"></span></h3>
+        <h3 class="hidden-md hidden-lg"><span class="text-primary text-capitalize" ng-bind="row.ds_product"></span></h3>
 
     </div>
 
@@ -25,7 +25,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
-            <input class="form-control input-sm"
+            <input class="form-control input-sm text-capitalize"
                    placeholder="Nome do produto"
                    name="ds_product"
                    type="text"
