--- a/app/view/user/upUser.html
+++ b/app/view/user/upUser.html
@@ -31,9 +31,9 @@
 
                      <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-offset-2 col-md-6 col-lg-offset-2 col-lg-6 well well-sm" ng-show="row.ds_name != null">
 
-                        <h1 class="hidden-xs hidden-sm"><span class="text-primary" ng-bind="row.ds_name"></span></h1>
+                        <h1 class="hidden-xs hidden-sm"><span class="text-primary text-capitalize" ng-bind="row.ds_name"></span></h1>
 
-                        <h3 class="hidden-md hidden-lg"><span class="text-primary" ng-bind="row.ds_name"></span></h3>
+                        <h3 class="hidden-md hidden-lg"><span class="text-primary text-capitalize" ng-bind="row.ds_name"></span></h3>
 
                     </div>
 
@@ -50,7 +50,7 @@
                         <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <input class="form-control input-sm"
+                            <input class="form-control input-sm text-capitalize"
                                    placeholder="name e sobrename"
                                    name="ds_name"
                                    type="text"
