--- a/app/view/customer/addCustomer.html
+++ b/app/view/customer/addCustomer.html
@@ -16,7 +16,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6">
            <input class="form-control input-sm text-capitalize"
-                   placeholder="Nome e sobrenome"
+                   placeholder="Nome sobrenome"
                    name="ds_name"
                    type="text"
                    ng-maxlength="50"
