--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -108,7 +108,7 @@
 
                     <div class="caption">
 
-                        <a href="#/product/detailProduct/{{row.sq_product}}">
+                        <a href="#/product/detailProduct/{{row}}">
                             <p align="center"><img src="{{row.im_product_image.encoded}}" class="img-responsive" /></p>
                         </a>
 
